portfolio is live

--- a/template/index.html
+++ b/template/index.html
@@ -7,11 +7,11 @@
             <div class="myinfo">
                 <div class="f-size-1">Hello I am </div>
                 <div class="f-size-1">Shyanukant Rathi</div>
-                <div class="f-size-2">CS Enthusiastic, Go-getter, Self-Learner</div>
+                <div class="f-size-2">CS Enthusiastic</div>
                 <div class="aboutmore">I am a Beginner Developer, Designer with Computer science degree. Passionate
                     about upcoming technology and love to learn and explore.</div>
                 <div class="buttons">
-                    <a href="{{ url_for('static', filename='/cv.txt') }}"><button>Download CV</button></a>
+                    <a href="http://shyanukant.github.io"><button>My CV</button></a>
                     <a href="/contact"><button>Contact Me</button></a>
                 </div>
             </div>
