--- a/template/edit.html
+++ b/template/edit.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         
-        <a href="/dashboard"><button>Dashboard Home</button></a>
+        <a href="/Admin"><button>Dashboard Home</button></a>
         <a href="/logout"><button>LogOut</button></a>
         <div class="dashboard">
             
