--- a/template/login.html
+++ b/template/login.html
@@ -14,7 +14,7 @@
             {% set fname = 'images/'+ params['login_image'] %}
             <img src="{{url_for('static', filename=fname)}}" alt="login">
             <h1 class="f-design1 ">Admin LogIn </h1>
-            <form action="/dashboard" method="post">
+            <form action="/admin" method="post">
                 
                 <div class="form-fill t-b-padding">
                     <label for="username" class="f-design2 f-size-3">Username </label>
