--- a/template/admin.html
+++ b/template/admin.html
@@ -25,13 +25,13 @@
         </div>
         
         <div class="dashboard">
-            <h1>Upload File </h1>
+            <!-- <h1>Upload File </h1>
             <form action="/uploader", method="post" enctype="multipart/form-data">
                 <label for="upload" class="upload">
                     <input type="file" name="file">
                 </label>
                 <button>Submit</button>
-            </form>
+            </form> -->
             <table>
                 <caption class="f-design3 f-size-2"> Your Post</caption>
                 <thead class="t-b-padding f-design1">
