--- a/template/contact.html
+++ b/template/contact.html
@@ -37,10 +37,15 @@
                     <textarea class="form-control-m" name="message" required></textarea>
                 </div>
                 <div class="form-fill t-b-padding">
+                    <label for="file" class="f-design2 f-size-3">Attachment File link </label>
+                    <input type="text" class="form-control" name="file">
+
+                </div>
+                <!-- <div class="form-fill t-b-padding">
                     <label for="upload " class="upload " style="width: 15vw;">
                         <input type="file" name="file">
                     </label>
-                </div>
+                </div> -->
                 <!-- <div class="f-size-3 t-b-padding"> -->
 
                     <!-- <input type="checkbox" class="check-box pointer"> -->
