--- a/template/index.html
+++ b/template/index.html
@@ -23,9 +23,10 @@
         <h2 class="font-design">PROJECT</h2>
         <div class="myproject">
             {% for project in projects %}
-            {% set fname = 'images/' + project.img_file %}
+            <!-- {% set fname = 'images/' + project.img_file %} -->
             <div class="p-detail">
-                <a  href="/project/{{project.slug}}"><img class="p-img" src="{{url_for('static', filename=fname)}}" alt=""></a>
+                <!-- <a  href="/project/{{project.slug}}"><img class="p-img" src="{{url_for('static', filename=fname)}}" alt=""></a> -->
+                <a  href="/project/{{project.slug}}"><img class="p-img" src="{{project.img_file}}" alt=""></a>
                 <a href="/project/{{project.slug}}" class="f-design1"><h3 >{{project.title}}</h3></a>
                 <a href="/project/{{project.slug}}" class="f-design2"><p> {{project.content[0:50]}}...
                 </p></a>
