--- a/template/contact.html
+++ b/template/contact.html
@@ -46,11 +46,11 @@
                         <input type="file" name="file">
                     </label>
                 </div> -->
-                 <div class="f-size-3 t-b-padding"> 
+               <!-- <div class="f-size-3 t-b-padding"> 
 
                      <input type="checkbox" class="check-box pointer"> 
                      <label for="check-box" class="f-design2">I want you to work on a project with me </label> 
-                 </div> 
+                 </div>  -->
                 <button type="submit" class="submit-btn">Submit</button>
             </form>
         </div>
