--- a/template/layout.html
+++ b/template/layout.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename = 'css/reponsive.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename = 'css/effect.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename = 'css/utils.css') }}">
-    <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/s%20favicon.ico') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/favicon.ico') }}" type="image/x-icon">
     <title>
         {% if title=='Project' %}
         {{params['web_name']}}-Project 
