add link table in db

--- a/template/project.html
+++ b/template/project.html
@@ -6,9 +6,9 @@
     <div class="phead" style="background-image: url({{project.img_file}});">
         
         <h2 class="f-design3">{{ project.title }}</h2>
-        <h4 class="para">Here is Sub-Title</h4>
+        <!-- <h4 class="para">Here is Sub-Title</h4> -->
         <span class="para f-design2">Date - {{ project.date }}</span><br>
-        <button class="projectbutton">More</button>
+        <a href="{{project.project_link}}"><button class="projectbutton">More</button></a>
 
     </div>
     <div class="data">
