--- a/template/edit.html
+++ b/template/edit.html
@@ -32,8 +32,13 @@
                     <textarea class="form-control-m l-width l-height" name="content">{{project.content}}</textarea>
                 </div>
                 <div class="form-fill t-b-padding">
+                    <label for="link" class="f-design2 f-size-3">Project Link</label>
+                    <input type="url" class="form-control" name="prodLink" value="{{project.project_link}}"> 
+                    
+                </div>
+                <div class="form-fill t-b-padding">
                     <label for="imgaeUpload" class="f-design2 f-size-3">Image File</label>
-                    <input type="text" class="form-control" name="image" value="{{project.img_file}}"> 
+                    <input type="url" class="form-control" name="image" value="{{project.img_file}}"> 
                     
                 </div>
                 <br><br>
