--- a/template/contact.html
+++ b/template/contact.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="form-fill t-b-padding">
                     <label for="file" class="f-design2 f-size-3">Attachment File link </label>
-                    <input type="text" class="form-control" name="file">
+                    <input type="url" class="form-control" name="link">
 
                 </div>
                 <!-- <div class="form-fill t-b-padding">
