--- a/template/project.html
+++ b/template/project.html
@@ -8,7 +8,7 @@
         <h2 class="f-design3">{{ project.title }}</h2>
         <!-- <h4 class="para">Here is Sub-Title</h4> -->
         <span class="para f-design2">Date - {{ project.date }}</span><br>
-        <a href="{{project.project_link}}"><button class="projectbutton">More</button></a>
+        <a href="{{project.project_link}}"><button class="projectbutton">View</button></a>
 
     </div>
     <div class="data">
