--- a/template/layout.html
+++ b/template/layout.html
@@ -104,7 +104,7 @@ L40.43,21.739z" />
 
             </div>
         </a>
-        <a href="mailto:{{params['yt_url']}}" target=" ">
+        <a href="{{params['yt_url']}}" target=" ">
             <div class="social ml">
                 <div class="iconName f-design2">Youtube</div>
                 <svg class="icon mail" viewBox="0 0 461.001 461.001">
