--- a/template/layout.html
+++ b/template/layout.html
@@ -88,7 +88,7 @@ L40.43,21.739z" />
 
             </div>
         </a>
-        <a href="mailto:{{params['gmail-user']}}" target=" ">
+        <a href="mailto:{{params['gmail-url']}}" target=" ">
             <div class="social ml">
                 <div class="iconName f-design2">Email</div>
                 <svg class="icon mail" viewBox="0 0 56.693 56.693">
