--- a/static/css/sytle.css
+++ b/static/css/sytle.css
@@ -3,9 +3,15 @@
     padding: 0;
 
 }
+html{
+    height: 100%;
+}
 body{
     background-color:rgba(0, 0, 0, 0.92);
     min-height: 100vh;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .container{
     background: rgb(5, 5, 5);   
@@ -170,6 +176,7 @@ form{
     height: 15vh;
     display: flex;
     justify-content: center;
+    margin-top: auto;
     
 }
 .phead{
