--- a/static/css/utils.css
+++ b/static/css/utils.css
@@ -35,6 +35,9 @@
 .m-top{
     margin-top: 15vh;
 }
+.p-top{
+    padding-top: 15px;
+}
 .font-design{
     text-align: center;
     margin-top: 18px;
