--- a/template/layout.html
+++ b/template/layout.html
@@ -42,7 +42,7 @@
 
 <!-- footer -->
 <footer class="f-container">
-    <div class="social-link">
+    <div class="social-link p-top">
         <a href="{{params['fb_url']}}" target=" ">
             <div class="social">
                 <div class="iconName f-design2">Facebook</div>
