--- a/template/layout.html
+++ b/template/layout.html
@@ -13,28 +13,28 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/favicon.ico') }}" type="image/x-icon">
     <title>
         {% if title=='Project' %}
-        {{params['web_name']}}-Project 
+        {{params['web_name']}}-Project
         {% elif title == 'Contact' %}
-        {{params['web_name']}}-Contact 
+        {{params['web_name']}}-Contact
         {% else %}
         {{params['web_name']}}
         {% endif %}
     </title>
 </head>
 <header class="container">
-        <div class="headerbar heardergo">
-            <nav>
-                <ul class="head-form">
-                    <li><a class="effect shape1" href="/"> HOME </a></li>
-                    <!-- <li><a href="/Services.html"> Services</a></li> -->
-                    <li><a class="effect shape3" href="/contact"> CONTACT ME</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="menubar">
-            <img class="open" src="{{url_for('static', filename='images/open.png')}}" alt="">
-            <img class="close" src="{{url_for('static', filename='images/close.png')}}" alt="">
-        </div>
+    <div class="headerbar heardergo">
+        <nav>
+            <ul class="head-form">
+                <li><a class="effect shape1" href="/"> HOME </a></li>
+                <!-- <li><a href="/Services.html"> Services</a></li> -->
+                <li><a class="effect shape3" href="/contact"> CONTACT ME</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="menubar">
+        <img class="open" src="{{url_for('static', filename='images/open.png')}}" alt="">
+        <img class="close" src="{{url_for('static', filename='images/close.png')}}" alt="">
+    </div>
 </header>
 
 
@@ -42,99 +42,102 @@
 
 <!-- footer -->
 <footer class="f-container">
-    <div class="social-link p-top">
-        <a href="{{params['fb_url']}}" target=" ">
-            <div class="social">
-                <div class="iconName f-design2">Facebook</div>
-                <svg class="icon facebook" viewBox="0 0 56.693 56.693">
-                    <path d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029
+    <div>
+        <div class="social-link p-top">
+            <a href="{{params['fb_url']}}" target=" ">
+                <div class="social">
+                    <div class="iconName f-design2">Facebook</div>
+                    <svg class="icon facebook" viewBox="0 0 56.693 56.693">
+                        <path d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029
 c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77
 L40.43,21.739z" />
-                </svg>
+                    </svg>
 
-            </div>
-        </a>
-        <a href="{{params['insta_url']}}" target=" ">
-            <div class="social insta">
-                <div class="iconName f-design2">Instagram</div>
-                <svg class="icon instagram" viewBox="0 0 56.7 56.7">
-                    <g>
-                        <path d="M28.2,16.7c-7,0-12.8,5.7-12.8,12.8s5.7,12.8,12.8,12.8S41,36.5,41,29.5S35.2,16.7,28.2,16.7z M28.2,37.7
+                </div>
+            </a>
+            <a href="{{params['insta_url']}}" target=" ">
+                <div class="social insta">
+                    <div class="iconName f-design2">Instagram</div>
+                    <svg class="icon instagram" viewBox="0 0 56.7 56.7">
+                        <g>
+                            <path d="M28.2,16.7c-7,0-12.8,5.7-12.8,12.8s5.7,12.8,12.8,12.8S41,36.5,41,29.5S35.2,16.7,28.2,16.7z M28.2,37.7
                         c-4.5,0-8.2-3.7-8.2-8.2s3.7-8.2,8.2-8.2s8.2,3.7,8.2,8.2S32.7,37.7,28.2,37.7z" />
-                        <circle cx="41.5" cy="16.4" r="2.9" />
-                        <path d="M49,8.9c-2.6-2.7-6.3-4.1-10.5-4.1H17.9c-8.7,0-14.5,5.8-14.5,14.5v20.5c0,4.3,1.4,8,4.2,10.7c2.7,2.6,6.3,3.9,10.4,3.9
+                            <circle cx="41.5" cy="16.4" r="2.9" />
+                            <path d="M49,8.9c-2.6-2.7-6.3-4.1-10.5-4.1H17.9c-8.7,0-14.5,5.8-14.5,14.5v20.5c0,4.3,1.4,8,4.2,10.7c2.7,2.6,6.3,3.9,10.4,3.9
                         h20.4c4.3,0,7.9-1.4,10.5-3.9c2.7-2.6,4.1-6.3,4.1-10.6V19.3C53,15.1,51.6,11.5,49,8.9z M48.4,39.9c0,3.1-0.9,5.6-2.7,7.3
                         c-1.8,1.7-4.3,2.6-7.3,2.6H18c-3,0-5.5-0.9-7.3-2.6C8.9,45.4,8,42.9,8,39.8V19.3c0-3,0.9-5.5,2.7-7.3c1.7-1.7,4.3-2.6,7.3-2.6h20.6
                         c3,0,5.5,0.9,7.3,2.7c1.7,1.8,2.7,4.3,2.7,7.2V39.9z" />
-                    </g>
-                </svg>
+                        </g>
+                    </svg>
 
-            </div>
-        </a>
-        <a href="{{params['tw_url']}}" target=" ">
-            <div class="social ">
-                <div class="iconName f-design2">Twitter</div>
-                <svg class="icon twitter" viewBox="0 0 56.693 56.693">
-                    <path d="M54.082,15.5495c-1.8115,0.8047-3.7597,1.3477-5.8051,1.5913c2.0874-1.25,3.6894-3.2305,4.4443-5.5918
+                </div>
+            </a>
+            <a href="{{params['tw_url']}}" target=" ">
+                <div class="social ">
+                    <div class="iconName f-design2">Twitter</div>
+                    <svg class="icon twitter" viewBox="0 0 56.693 56.693">
+                        <path d="M54.082,15.5495c-1.8115,0.8047-3.7597,1.3477-5.8051,1.5913c2.0874-1.25,3.6894-3.2305,4.4443-5.5918
 	c-1.9531,1.1587-4.1152,2-6.418,2.4536c-1.8432-1.9643-4.4702-3.1919-7.3769-3.1919c-5.5816,0-10.1069,4.5254-10.1069,10.107
 	c0,0.792,0.0893,1.563,0.2617,2.3027c-8.3999-0.4209-15.8477-4.4443-20.8325-10.5596c-0.8697,1.4922-1.3682,3.2281-1.3682,5.0811
 	c0,3.5063,1.7842,6.5996,4.4961,8.4126c-1.6563-0.0532-3.2154-0.5073-4.5777-1.2647c-0.0009,0.042-0.0009,0.0845-0.0009,0.128
 	c0,4.896,3.4839,8.9809,8.1079,9.9101c-0.8482,0.2305-1.7412,0.3545-2.6631,0.3545c-0.6519,0-1.2847-0.063-1.9019-0.1816
 	c1.2867,4.0151,5.0191,6.9375,9.441,7.019c-3.459,2.711-7.8165,4.3267-12.5523,4.3267c-0.8154,0-1.6196-0.0484-2.4106-0.1411
 	c4.4736,2.8681,9.7856,4.541,15.4931,4.541c18.5908,0,28.7559-15.4009,28.7559-28.7569c0-0.4375-0.0088-0.8745-0.0283-1.3076
-	C51.0137,19.3571,52.728,17.5769,54.082,15.5495z"/>
-                   
-                </svg>
+	C51.0137,19.3571,52.728,17.5769,54.082,15.5495z" />
 
-            </div>
-        </a>
-        <a href="mailto:{{params['gmail-url']}}" target=" ">
-            <div class="social ml">
-                <div class="iconName f-design2">Email</div>
-                <svg class="icon mail" viewBox="0 0 56.693 56.693">
-                    <path d="M53.1719,14.5953l0.0011-0.0011l-0.0011,0.0008v-1.184c0-2.2468-1.8384-4.0852-4.0853-4.0852l-0.0012,0.0011l-0.0024,0.0018
+                    </svg>
+
+                </div>
+            </a>
+            <a href="mailto:{{params['gmail-url']}}" target=" ">
+                <div class="social ml">
+                    <div class="iconName f-design2">Email</div>
+                    <svg class="icon mail" viewBox="0 0 56.693 56.693">
+                        <path d="M53.1719,14.5953l0.0011-0.0011l-0.0011,0.0008v-1.184c0-2.2468-1.8384-4.0852-4.0853-4.0852l-0.0012,0.0011l-0.0024,0.0018
 	l0.0036-0.0029H7.3962l0.0161,0.0131l-0.0161-0.012c-2.2468,0-4.0853,1.8384-4.0853,4.0853v27.9073
 	c0,2.2468,1.8384,4.0851,4.0853,4.0851h1.4543h38.6578v-0.001c4.2856-0.0498,5.5728-1.1102,5.6702-4.0809L53.1719,14.5953z
 	 M46.0429,10.3258L28.1753,23.487L10.4239,10.3258H46.0429z M9.8608,20.5521l16.5508,11.4004l0.0166,0.0115L9.8513,43.4907
 	L9.8608,20.5521z M10.2886,44.4046l17.0151-11.8314l0.2985,0.2077c0.1716,0.1194,0.3714,0.1792,0.5712,0.1792
 	c0.1982,0,0.8773-0.39,0.8773-0.39l17.0197,11.8345H10.2886z M46.4973,43.4836L29.9305,31.9641l9.2394-6.3642l7.3274-5.0472V43.4836
-	z"/>
-                   
-                </svg>
+	z" />
 
-            </div>
-        </a>
-        <a href="{{params['yt_url']}}" target=" ">
-            <div class="social ml">
-                <div class="iconName f-design2">Youtube</div>
-                <svg class="icon mail" viewBox="0 0 461.001 461.001">
-                    <path d="M365.257,67.393H95.744C42.866,67.393,0,110.259,0,163.137v134.728  c0,52.878,42.866,95.744,95.744,95.744h269.513c52.878,0,95.744-42.866,95.744-95.744V163.137  C461.001,110.259,418.135,67.393,365.257,67.393z M300.506,237.056l-126.06,60.123c-3.359,1.602-7.239-0.847-7.239-4.568V168.607  c0-3.774,3.982-6.22,7.348-4.514l126.06,63.881C304.363,229.873,304.298,235.248,300.506,237.056z"/>
-                </svg>
+                    </svg>
 
-            </div>
-        </a>
-        <a href="{{params['lind_url']}}" target=" ">
-        <div class="social">
-            <div class="iconName f-design2">Linkedin</div>
-            <svg class="icon linkedin" viewBox="0 0 56.693 56.693">
-                <g>
-                    <path d="M30.071,27.101v-0.077c-0.016,0.026-0.033,0.052-0.05,0.077H30.071z" />
-                    <path d="M49.265,4.667H7.145c-2.016,0-3.651,1.596-3.651,3.563v42.613c0,1.966,1.635,3.562,3.651,3.562h42.12
+                </div>
+            </a>
+            <a href="{{params['yt_url']}}" target=" ">
+                <div class="social ml">
+                    <div class="iconName f-design2">Youtube</div>
+                    <svg class="icon mail" viewBox="0 0 461.001 461.001">
+                        <path
+                            d="M365.257,67.393H95.744C42.866,67.393,0,110.259,0,163.137v134.728  c0,52.878,42.866,95.744,95.744,95.744h269.513c52.878,0,95.744-42.866,95.744-95.744V163.137  C461.001,110.259,418.135,67.393,365.257,67.393z M300.506,237.056l-126.06,60.123c-3.359,1.602-7.239-0.847-7.239-4.568V168.607  c0-3.774,3.982-6.22,7.348-4.514l126.06,63.881C304.363,229.873,304.298,235.248,300.506,237.056z" />
+                    </svg>
+
+                </div>
+            </a>
+            <a href="{{params['lind_url']}}" target=" ">
+                <div class="social">
+                    <div class="iconName f-design2">Linkedin</div>
+                    <svg class="icon linkedin" viewBox="0 0 56.693 56.693">
+                        <g>
+                            <path d="M30.071,27.101v-0.077c-0.016,0.026-0.033,0.052-0.05,0.077H30.071z" />
+                            <path d="M49.265,4.667H7.145c-2.016,0-3.651,1.596-3.651,3.563v42.613c0,1.966,1.635,3.562,3.651,3.562h42.12
                         c2.019,0,3.654-1.597,3.654-3.562V8.23C52.919,6.262,51.283,4.667,49.265,4.667z M18.475,46.304h-7.465V23.845h7.465V46.304z
                          M14.743,20.777h-0.05c-2.504,0-4.124-1.725-4.124-3.88c0-2.203,1.67-3.88,4.223-3.88c2.554,0,4.125,1.677,4.175,3.88
                         C18.967,19.052,17.345,20.777,14.743,20.777z M45.394,46.304h-7.465V34.286c0-3.018-1.08-5.078-3.781-5.078
                         c-2.062,0-3.29,1.389-3.831,2.731c-0.197,0.479-0.245,1.149-0.245,1.821v12.543h-7.465c0,0,0.098-20.354,0-22.459h7.465v3.179
                         c0.992-1.53,2.766-3.709,6.729-3.709c4.911,0,8.594,3.211,8.594,10.11V46.304z" />
-                </g>
-            </svg>
+                        </g>
+                    </svg>
 
-        </div></a>
-        <a href="{{params['git_url']}}" target=" ">
-        <div class="social git">
-            <div class="iconName f-design2">GitHub</div>
-            <svg class="icon github" viewBox="-91 49.217 56.693 56.693">
-                <g>
-                    <path d="M-38.1773,78.2347c0.0102,0.0012,0.0215,0.0023,0.0316,0.0023c0.079,0,0.1513-0.0576,0.166-0.1389
+                </div>
+            </a>
+            <a href="{{params['git_url']}}" target=" ">
+                <div class="social git">
+                    <div class="iconName f-design2">GitHub</div>
+                    <svg class="icon github" viewBox="-91 49.217 56.693 56.693">
+                        <g>
+                            <path d="M-38.1773,78.2347c0.0102,0.0012,0.0215,0.0023,0.0316,0.0023c0.079,0,0.1513-0.0576,0.166-0.1389
     c0.0169-0.0915-0.0441-0.1796-0.1355-0.1976c-2.3114-0.4257-4.0026-0.8966-9.7083-0.8491c0.3557-1.3155,0.5476-2.8715,0.586-4.7144
     c-0.009-4.9966-2.4006-6.7637-2.8602-7.5937c0.6775-3.7827-0.1129-5.5047-0.4799-6.0953c-1.355-0.4822-4.7143,1.2399-6.5492,2.4537
     c-2.9923-0.8751-9.3157-0.7905-11.687,0.2258c-4.3755-3.1335-6.6904-2.6536-6.6904-2.6536s-1.4962,2.6818-0.3952,6.6057
@@ -175,7 +178,7 @@ L40.43,21.739z" />
     c1.1697,0.0728,3.1276,0.1945,5.0663,0.1945c1.7554,0,3.531-0.1296,4.4849-0.1994c0.4465-0.0328,0.6258-0.0455,0.7411-0.0455
     c4.6929,0,6.3649,2.9985,6.3649,5.8044C-50.6965,79.1217-52.1116,82.6148-58.853,82.8356z" />
 
-                    <path d="M-61.4556,80.4198c-0.0936,0-0.1694,0.0759-0.1694,0.1694c0,0.3732-0.4386,0.7904-1.0256,0.7904
+                            <path d="M-61.4556,80.4198c-0.0936,0-0.1694,0.0759-0.1694,0.1694c0,0.3732-0.4386,0.7904-1.0256,0.7904
     c-0.0847,0-0.1662-0.0093-0.2441-0.0261c-0.1949-0.0419-0.367-0.13-0.5078-0.2336c-0.0282-0.0207-0.0551-0.0421-0.0807-0.0638
     c-0.0768-0.0651-0.1416-0.1336-0.1927-0.1989c-0.0851-0.1087-0.1321-0.2083-0.1321-0.268c0-0.0935-0.0758-0.1694-0.1694-0.1694
     s-0.1694,0.0759-0.1694,0.1694c0,0.0483,0.0099,0.1022,0.0288,0.1595c0.0285,0.0859,0.0774,0.1796,0.1441,0.2737
@@ -183,25 +186,45 @@ L40.43,21.739z" />
     c0.0645,0.0085,0.1306,0.0131,0.1981,0.0131c0.3518,0,0.6569-0.114,0.8889-0.2868c0.0331-0.0247,0.0648-0.0506,0.0948-0.0775
     c0.0601-0.0539,0.114-0.1119,0.161-0.1729c0.1174-0.1524,0.1917-0.3228,0.2132-0.4913c0.0043-0.0337,0.0065-0.0673,0.0065-0.1007
     C-61.2862,80.4956-61.3621,80.4198-61.4556,80.4198z" />
-                    <path d="M-63.1533,79.5132c0.0419,0.0621,0.0955,0.1157,0.1576,0.1576c0.0233,0.0157,0.0478,0.0298,0.0733,0.0421
+                            <path d="M-63.1533,79.5132c0.0419,0.0621,0.0955,0.1157,0.1576,0.1576c0.0233,0.0157,0.0478,0.0298,0.0733,0.0421
     c0.051,0.0246,0.1061,0.042,0.1641,0.0508c0.029,0.0044,0.0587,0.0067,0.0889,0.0067c0.1208,0,0.2331-0.0367,0.3262-0.0997
     c0.0388-0.0262,0.0743-0.0569,0.1057-0.0915c0.0437-0.0481,0.0758-0.1055,0.1016-0.1663c0.0297-0.07,0.0499-0.1451,0.0499-0.226
     c0-0.3222-0.2612-0.5835-0.5834-0.5835c-0.1611,0-0.3069,0.0653-0.4125,0.171c-0.0046,0.0046-0.008,0.0103-0.0125,0.0151
     c-0.03,0.0321-0.0555,0.0679-0.0777,0.1061c-0.0311,0.0536-0.056,0.1112-0.0688,0.1738c-0.0078,0.038-0.0118,0.0773-0.0118,0.1176
     s0.0041,0.0796,0.0118,0.1176C-63.2255,79.3806-63.1952,79.4511-63.1533,79.5132z" />
-                    <path d="M-67.4734,73.3949c-0.1194-0.1469-0.2485-0.277-0.3856-0.3879s-0.2822-0.2028-0.4336-0.2729s-0.3093-0.1188-0.4719-0.1434
+                            <path d="M-67.4734,73.3949c-0.1194-0.1469-0.2485-0.277-0.3856-0.3879s-0.2822-0.2028-0.4336-0.2729s-0.3093-0.1188-0.4719-0.1434
     c-0.0813-0.0123-0.1638-0.0186-0.2473-0.0186c-1.3356,0-2.4183,1.6135-2.4183,3.6039s1.0827,3.3781,2.4183,3.3781
     c0.0835,0,0.166-0.0054,0.2473-0.0161c0.1626-0.0213,0.3204-0.0635,0.4719-0.1251c0.1514-0.0616,0.2965-0.1425,0.4336-0.2414
     c0.137-0.0988,0.2661-0.2155,0.3856-0.3485c0.1194-0.133,0.2292-0.2823,0.3278-0.4464c0.345-0.5743,0.5522-1.3298,0.5522-2.2006
     s-0.2072-1.6695-0.5522-2.2925C-67.2441,73.7054-67.354,73.5418-67.4734,73.3949z" />
-                    <path d="M-55.9415,72.5719c-1.3356,0-2.4183,1.6135-2.4183,3.6039s1.0826,3.3781,2.4183,3.3781s2.4183-1.3877,2.4183-3.3781
+                            <path d="M-55.9415,72.5719c-1.3356,0-2.4183,1.6135-2.4183,3.6039s1.0826,3.3781,2.4183,3.3781s2.4183-1.3877,2.4183-3.3781
     S-54.6058,72.5719-55.9415,72.5719z" />
-                </g>
-            </svg>
+                        </g>
+                    </svg>
 
-        </div></a>
+                </div>
+            </a>
+
+        </div>
+        <div class="social-link ">
+            <a href="{{params['opensea']}}" class="nft" target=" ">
+                <div class="nftPop">
+                    <div class="iconName f-design2">NFT</div>
+                    <img src="https://img.shields.io/static/v1.svg?label=OPENSEA&message=🎨&color=violet&logoColor=white&labelColor=blue"
+                        alt="">
+                </div>
+            </a>
+            <div class="nftPop">
+                <div class="iconName f-design2">NFT</div>
+                <a href="{{params['kudos']}}" class="nft" target=" ">
+                    <img src="https://img.shields.io/static/v1.svg?label=KUDOS&message=🎉&color=violet&logoColor=white&labelColor=red"
+                        alt="">
+            </div>
+            </a>
+        </div>
     </div>
-</footer>
-<!-- <script src="/static/js/script.js"></script> -->
+
+</footer><!-- <script src="/static/js/script.js"></script> -->
 <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+
 </html>
