--- a/template/index.html
+++ b/template/index.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="mypic">
-                <img src="{{url_for('static', filename='images/shyanukant.png')}}" alt="shyanukant">
+                <img src="{{url_for('static', filename='images/shyanukant.jpg')}}" alt="shyanukant">
             </div>
         </div>
         <!-- CERTIFICATES -->
