Add WYSIWYG Editor

--- a/template/contact.html
+++ b/template/contact.html
@@ -21,24 +21,24 @@
             <form action="/contact" method="post" enctype="multipart/form-data">
                 <div class="form-fill t-b-padding">
                     <label for="clientname" class="f-design2 f-size-3">Name </label>
-                    <input type="text" class="form-control" name="name" required>
+                    <input type="text" class="form-control small-box" name="name" required>
                 </div>
                 <div class="form-fill t-b-padding">
                     <label for="clientmail" class="f-design2 f-size-3">Email Address </label>
-                    <input type="email" class="form-control" name="email" required>
+                    <input type="email" class="form-control small-box" name="email" required>
                 </div>
                 <div class="form-fill t-b-padding">
                     <label for="clientphone" class="f-design2 f-size-3">Phone </label>
-                    <input type="phone" class="form-control" name="phone">
+                    <input type="phone" class="form-control small-box" name="phone">
 
                 </div>
                 <div class="form-fill t-b-padding">
                     <label for="clientmessage" class="f-design2 f-size-3" >Message</label>
-                    <textarea class="form-control-m" name="message" required></textarea>
+                    <textarea class="form-control-m small-box" name="message" required></textarea>
                 </div>
                 <div class="form-fill t-b-padding">
                     <label for="file" class="f-design2 f-size-3">Attachment File link </label>
-                    <input type="url" class="form-control" name="link">
+                    <input type="url" class="form-control small-box" name="link">
 
                 </div>
                 <!-- <div class="form-fill t-b-padding">
