--- a/static/css/sytle.css
+++ b/static/css/sytle.css
@@ -126,6 +126,7 @@ button{
     height: 400px;
     
 }
+.p-detail
 .p-img{
     width: 300px;
     height: 300px;
@@ -151,7 +152,6 @@ form{
 }
 
 .form-control{
-    width: 40vw;
     /* height: 2vh; */
     border-radius: 13px;
     padding: 9px;
@@ -176,6 +176,7 @@ form{
 }
 .data{
         padding: 24px;
+        color: var(--color-3);
 }
 .para{
     padding:21px 34px;
@@ -289,4 +290,8 @@ th, td{
     0%{
         transform: scale(98%);
     }
+}
+.note-editor .note-editing-area .note-editable {
+    outline: none;
+    background: white;
 }
