--- a/template/contact.html
+++ b/template/contact.html
@@ -17,7 +17,7 @@
         
         <div class="contactform">
             
-            <h1 class="f-design1 m-left">Contact me for Work/ Genral Enquiries</h1>
+            <h1 class="f-design1 mc-left">Contact me for Work/ Genral Enquiries</h1>
             <form action="/contact" method="post" enctype="multipart/form-data">
                 <div class="form-fill t-b-padding">
                     <label for="clientname" class="f-design2 f-size-3">Name </label>
