--- a/static/css/reponsive.css
+++ b/static/css/reponsive.css
@@ -68,7 +68,7 @@
 
     .close{
         width: 22px;
-        margin-left: 187px;
+        margin-left: 160px;
         padding: 7px 0;
     }
     li{
@@ -118,6 +118,18 @@
     }
     
 }
+@media screen and (max-width: 600px){
+    form{
+        margin: 0;
+    }
+    .mc-left{
+        margin-left: 0vw;
+    }
+    .contactform{
+        /* padding: 64px 0 0 80px; */
+        font-size: 0.7em;
+    }
+}
 @media (max-width: 400px){
     .f-size-1{
         font-size: 2.4em;
@@ -140,14 +152,14 @@
         padding: 10px;
     }
     .contactform{
-        padding: 64px 0 0 40px;
+        padding: 5vh 0 0 9vw;
         font-size: 0.8em;
 
     }
     .myinfo{
         font-size: 0.8em;
     }
-   
+
     .form-control{
         width: 50vw;
     }
